Opened 12 years ago

Closed 12 years ago

#3463 closed defect (fixed)

snowenc: Assertion failure

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: crash abort snow
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

C:\>ffmpeg -i 3.tif -vcodec snow -strict -2 out.avi
ffmpeg version N-61338-g12ce58b Copyright (c) 2000-2014 the FFmpeg developers
  built on Mar 12 2014 23:35:57 with gcc 4.8.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aa
cenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavp
ack --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable
-zlib
  libavutil      52. 66.101 / 52. 66.101
  libavcodec     55. 52.102 / 55. 52.102
  libavformat    55. 34.101 / 55. 34.101
  libavdevice    55. 11.100 / 55. 11.100
  libavfilter     4.  3.100 /  4.  3.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
Input #0, image2, from '3.tif':
  Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: tiff, monob, 3400x3400, 25 tbr, 25 tbn, 25 tbc
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf55.34.101
    Stream #0:0: Video: snow (SNOW / 0x574F4E53), gray, 3400x3400, q=2-31, 200 k
b/s, 25 tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (tiff -> snow)
Press [q] to stop, [?] for help
Assertion coef_sum < 2147483647 failed at /home/kyle/software/ffmpeg/source/ffmp
eg-git/libavcodec/snowenc.c:1506

This application has requested the Runtime to terminate it in an unusual way.
Please contact the application's support team for more information.

Attachments (1)

3.tif (1.2 MB ) - added by ami_stuff 12 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 12 years ago

Attachment: 3.tif added

comment:1 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavcodec
Keywords: crash abort snow added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Not a regression.

comment:2 by Carl Eugen Hoyos, 12 years ago

Summary: snowenc: asserationsnowenc: Assertion failure

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.